// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBoxField should render correctly 1`] = `
<DocumentFragment>
  .cache-1txlkbl-StyledRelativeDiv {
  position: relative;
}

.cache-1q7nrzy-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fcfcfd;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1q7nrzy-StyledInput::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1q7nrzy-StyledInput::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1q7nrzy-StyledInput:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1q7nrzy-StyledInput::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1q7nrzy-StyledInput:hover,
.cache-1q7nrzy-StyledInput:focus {
  border-color: #4f0599;
}

.cache-1q7nrzy-StyledInput:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1q7nrzy-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1q7nrzy-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-1q7nrzy-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-1q7nrzy-StyledInput::placeholder {
  opacity: 1;
}

.cache-3dfrrx-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-3dfrrx-StyledExpandable.cache-3dfrrx-StyledExpandable {
  overflow: hidden;
}

.cache-e84ooj-StyledError {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
    >
      <div
        class="cache-1txlkbl-StyledRelativeDiv e18bmnpq2"
      >
        <input
          autocomplete="on"
          class="cache-1q7nrzy-StyledInput e18bmnpq0"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="e14o3tsk0 cache-3dfrrx-StyledExpandable"
      >
        <div
          class="cache-e84ooj-StyledError e18bmnpq1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextBoxField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1txlkbl-StyledRelativeDiv {
  position: relative;
}

.cache-qdi7w8-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fcfcfd;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-qdi7w8-StyledInput::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-qdi7w8-StyledInput::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-qdi7w8-StyledInput:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-qdi7w8-StyledInput::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-qdi7w8-StyledInput:hover,
.cache-qdi7w8-StyledInput:focus {
  border-color: #4f0599;
}

.cache-qdi7w8-StyledInput:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-qdi7w8-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-qdi7w8-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-qdi7w8-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-qdi7w8-StyledInput::placeholder {
  opacity: 1;
}

.cache-3dfrrx-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-3dfrrx-StyledExpandable.cache-3dfrrx-StyledExpandable {
  overflow: hidden;
}

.cache-e84ooj-StyledError {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
    >
      <div
        class="cache-1txlkbl-StyledRelativeDiv e18bmnpq2"
      >
        <input
          autocomplete="on"
          class="cache-qdi7w8-StyledInput e18bmnpq0"
          disabled=""
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="e14o3tsk0 cache-3dfrrx-StyledExpandable"
      >
        <div
          class="cache-e84ooj-StyledError e18bmnpq1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextBoxField should render correctly with minLength 1`] = `
<DocumentFragment>
  .cache-1txlkbl-StyledRelativeDiv {
  position: relative;
}

.cache-udr7pk-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fcfcfd;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  border-color: #dd3252;
}

.cache-udr7pk-StyledInput::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-udr7pk-StyledInput::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-udr7pk-StyledInput:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-udr7pk-StyledInput::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-udr7pk-StyledInput:hover,
.cache-udr7pk-StyledInput:focus {
  border-color: #4f0599;
}

.cache-udr7pk-StyledInput:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-udr7pk-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-udr7pk-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-udr7pk-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-udr7pk-StyledInput::placeholder {
  opacity: 1;
}

.cache-udr7pk-StyledInput:hover,
.cache-udr7pk-StyledInput:focus {
  border-color: #a6102d;
}

.cache-udr7pk-StyledInput:focus {
  box-shadow: 0 0 0 2px rgba(221,50,82,0.25);
  border-color: #dd3252;
}

.cache-12czo5r-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.cache-12czo5r-StyledExpandable.cache-12czo5r-StyledExpandable {
  overflow: hidden;
}

.cache-e84ooj-StyledError {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
      minlength="13"
    >
      <div
        class="cache-1txlkbl-StyledRelativeDiv e18bmnpq2"
      >
        <input
          autocomplete="on"
          class="cache-udr7pk-StyledInput e18bmnpq0"
          name="test"
          type="text"
          value="test"
        />
      </div>
      <div
        class="e14o3tsk0 cache-12czo5r-StyledExpandable"
      >
        <div
          class="cache-e84ooj-StyledError e18bmnpq1"
        >
          This field should have a length greater than 13
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
